Bug 426177 - Alert user when selecting unreadable input file r=emilio

The change is done at the nsFilePicker level, when it's in open mode.

Differential Revision: https://phabricator.services.mozilla.com/D166419